objects/Simplicity_Dealer__c.object
<CustomObject>
    <fields>
        <fullName>AHContact1Cell__c</fullName>
        <label>AHContact1Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AHContact1Home__c</fullName>
        <label>AHContact1Home</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AHContact1JobTitle__c</fullName>
        <label>AHContact1JobTitle</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHContact1Name__c</fullName>
        <label>AHContact1Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHContact2Cell__c</fullName>
        <label>AHContact2Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AHContact2Home__c</fullName>
        <label>AHContact2Home</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AHContact2JobTitle__c</fullName>
        <label>AHContact2JobTitle</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHContact2Name__c</fullName>
        <label>AHContact2Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHContact3Cell__c</fullName>
        <label>AHContact3Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AHContact3Home__c</fullName>
        <label>AHContact3Home</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AHContact3JobTitle__c</fullName>
        <label>AHContact3JobTitle</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHContact3Name__c</fullName>
        <label>AHContact3Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abbreviation__c</fullName>
        <label>Abbreviation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin__c</fullName>
        <label>Admin</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessEmail__c</fullName>
        <label>BusinessEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CEO__c</fullName>
        <label>CEO</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CR__c</fullName>
        <label>CR</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <label>CompanyName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoreDealer__c</fullName>
        <label>CoreDealer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerCode__c</fullName>
        <label>DealerCode</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerCopyForSite__c</fullName>
        <label>DealerCopyForSite</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerType__c</fullName>
        <label>DealerType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_Care__c</fullName>
        <label>Extra Care</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FaxBusiness__c</fullName>
        <label>FaxBusiness</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FreePhone__c</fullName>
        <label>FreePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NCCShortcodePhone_Local__c</fullName>
        <label>NCCShortcodePhone_Local</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Sales__c</fullName>
        <label>New Sales</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_RSN__c</fullName>
        <label>Org RSN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts__c</fullName>
        <label>Parts</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneBusiness__c</fullName>
        <label>PhoneBusiness</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PostalAddressLine1__c</fullName>
        <label>PostalAddressLine1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalAddressLine2__c</fullName>
        <label>PostalAddressLine2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalAddressLine3__c</fullName>
        <label>PostalAddressLine3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalAddressPostCode__c</fullName>
        <label>PostalAddressPostCode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StreetAddressLine1__c</fullName>
        <label>StreetAddressLine1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StreetAddressLine2__c</fullName>
        <label>StreetAddressLine2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StreetAddressLine3__c</fullName>
        <label>StreetAddressLine3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StreetAddressMapGrid_X__c</fullName>
        <label>StreetAddressMapGrid_X</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StreetAddressMapGrid_Y__c</fullName>
        <label>StreetAddressMapGrid_Y</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Town__c</fullName>
        <label>Town</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used_Sales__c</fullName>
        <label>Used Sales</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Simplicity Dealer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SD-{00000}</displayFormat>
        <label>Simplicity Dealer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Simplicity Dealers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>